Fixed layout issue with features page

--- a/layouts/default/layout.css
+++ b/layouts/default/layout.css
@@ -121,6 +121,11 @@ header span.title {
 	max-width: 100%;
 }
 
+#content article.page form.wide {
+	width: 100%;
+	max-width: 100%;
+}
+
 #content dl dt {
 	margin-left: 0;
 	display: block;
